--- a/notebooks/reports/surveys/1.2_survey_analyses.ipynb
+++ b/notebooks/reports/surveys/1.2_survey_analyses.ipynb
@@ -3326,202 +3326,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "9f4f983d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"Total\"] = \"Total\"\n",
-    "df_percentage = round(df.groupby([\"Total\", \"Dataset\", \"Main Trait\", \"Result\"])[\"Species\"].count() / df.groupby([\"Main Trait\"])[\"Species\"].count() * 100, 2).to_frame()\n",
-    "df_percentage = df_percentage\\\n",
-    "    .rename(columns={\"Species\": \"Percentage\"})\\\n",
-    "    .reset_index()\n",
-    "\n",
-    "df_percentage['Color'] = pd.Series(color_dict.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "5b563da2",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total</th>\n",
-       "      <th>Dataset</th>\n",
-       "      <th>Main Trait</th>\n",
-       "      <th>Result</th>\n",
-       "      <th>Percentage</th>\n",
-       "      <th>Color</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Caribbean</td>\n",
-       "      <td>Fruit colour</td>\n",
-       "      <td>Can infer correct Entity</td>\n",
-       "      <td>31.15</td>\n",
-       "      <td>None of the above</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Caribbean</td>\n",
-       "      <td>Fruit colour</td>\n",
-       "      <td>Can infer correct Quality</td>\n",
-       "      <td>13.11</td>\n",
-       "      <td>Can infer correct Entity</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Caribbean</td>\n",
-       "      <td>Fruit colour</td>\n",
-       "      <td>Can infer correct Value</td>\n",
-       "      <td>27.87</td>\n",
-       "      <td>Can infer correct Quality</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Caribbean</td>\n",
-       "      <td>Fruit colour</td>\n",
-       "      <td>None of the above</td>\n",
-       "      <td>27.87</td>\n",
-       "      <td>Can infer correct Value</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Caribbean</td>\n",
-       "      <td>Fruit shape</td>\n",
-       "      <td>Can infer correct Entity</td>\n",
-       "      <td>40.00</td>\n",
-       "      <td>Caribbean</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>PlantNet</td>\n",
-       "      <td>trunk and root</td>\n",
-       "      <td>None of the above</td>\n",
-       "      <td>40.00</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>PlantNet</td>\n",
-       "      <td>vein</td>\n",
-       "      <td>Can infer correct Entity</td>\n",
-       "      <td>22.86</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>PlantNet</td>\n",
-       "      <td>vein</td>\n",
-       "      <td>Can infer correct Quality</td>\n",
-       "      <td>14.29</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>PlantNet</td>\n",
-       "      <td>vein</td>\n",
-       "      <td>Can infer correct Value</td>\n",
-       "      <td>2.86</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>151</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>PlantNet</td>\n",
-       "      <td>vein</td>\n",
-       "      <td>None of the above</td>\n",
-       "      <td>60.00</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>152 rows × 6 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Total    Dataset      Main Trait                     Result  Percentage  \\\n",
-       "0    Total  Caribbean    Fruit colour   Can infer correct Entity       31.15   \n",
-       "1    Total  Caribbean    Fruit colour  Can infer correct Quality       13.11   \n",
-       "2    Total  Caribbean    Fruit colour    Can infer correct Value       27.87   \n",
-       "3    Total  Caribbean    Fruit colour          None of the above       27.87   \n",
-       "4    Total  Caribbean     Fruit shape   Can infer correct Entity       40.00   \n",
-       "..     ...        ...             ...                        ...         ...   \n",
-       "147  Total   PlantNet  trunk and root          None of the above       40.00   \n",
-       "148  Total   PlantNet            vein   Can infer correct Entity       22.86   \n",
-       "149  Total   PlantNet            vein  Can infer correct Quality       14.29   \n",
-       "150  Total   PlantNet            vein    Can infer correct Value        2.86   \n",
-       "151  Total   PlantNet            vein          None of the above       60.00   \n",
-       "\n",
-       "                         Color  \n",
-       "0            None of the above  \n",
-       "1     Can infer correct Entity  \n",
-       "2    Can infer correct Quality  \n",
-       "3      Can infer correct Value  \n",
-       "4                    Caribbean  \n",
-       "..                         ...  \n",
-       "147                        NaN  \n",
-       "148                        NaN  \n",
-       "149                        NaN  \n",
-       "150                        NaN  \n",
-       "151                        NaN  \n",
-       "\n",
-       "[152 rows x 6 columns]"
+       "Total  Dataset    Main Trait      Result                   \n",
+       "Total  Caribbean  Fruit colour    Can infer correct Entity     19\n",
+       "                                  Can infer correct Quality     8\n",
+       "                                  Can infer correct Value      17\n",
+       "                                  None of the above            17\n",
+       "                  Fruit shape     Can infer correct Entity     16\n",
+       "                                                               ..\n",
+       "       PlantNet   trunk and root  None of the above             4\n",
+       "                  vein            Can infer correct Entity      8\n",
+       "                                  Can infer correct Quality     5\n",
+       "                                  Can infer correct Value       1\n",
+       "                                  None of the above            21\n",
+       "Name: Species, Length: 152, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_percentage"
+    "df.groupby([\"Total\", \"Dataset\", \"Main Trait\", \"Result\"])[\"Species\"].count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "cdd9151e",
    "metadata": {},
    "outputs": [
@@ -6081,7 +5919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "b27f217e",
    "metadata": {},
    "outputs": [
@@ -6115,122 +5953,65 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>20</th>\n",
        "      <td>Total</td>\n",
        "      <td>Caribbean</td>\n",
-       "      <td>Fruit colour</td>\n",
+       "      <td>Leaf glands</td>\n",
        "      <td>Can infer correct Entity</td>\n",
-       "      <td>31.15</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>90</th>\n",
        "      <td>Total</td>\n",
-       "      <td>Caribbean</td>\n",
-       "      <td>Fruit colour</td>\n",
-       "      <td>Can infer correct Quality</td>\n",
-       "      <td>13.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Caribbean</td>\n",
-       "      <td>Fruit colour</td>\n",
-       "      <td>Can infer correct Value</td>\n",
-       "      <td>27.87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Caribbean</td>\n",
-       "      <td>Fruit colour</td>\n",
-       "      <td>None of the above</td>\n",
-       "      <td>27.87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>Caribbean</td>\n",
-       "      <td>Fruit shape</td>\n",
-       "      <td>Can infer correct Entity</td>\n",
-       "      <td>40.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>155</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Can infer correct Value</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Caribbean</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Palm</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>158</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>PlantNet</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>blade color</td>\n",
+       "      <td>Can infer correct Entity</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>159</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>140</th>\n",
        "      <td>Total</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>sexuality</td>\n",
+       "      <td>Can infer correct Value</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>spine</td>\n",
+       "      <td>None of the above</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>PlantNet</td>\n",
+       "      <td>stem shape</td>\n",
+       "      <td>Can infer correct Entity</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>312 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Total    Dataset    Main Trait                     Result  Percentage\n",
-       "0    Total  Caribbean  Fruit colour   Can infer correct Entity       31.15\n",
-       "1    Total  Caribbean  Fruit colour  Can infer correct Quality       13.11\n",
-       "2    Total  Caribbean  Fruit colour    Can infer correct Value       27.87\n",
-       "3    Total  Caribbean  Fruit colour          None of the above       27.87\n",
-       "4    Total  Caribbean   Fruit shape   Can infer correct Entity       40.00\n",
-       "..     ...        ...           ...                        ...         ...\n",
-       "155    NaN        NaN           NaN    Can infer correct Value         NaN\n",
-       "156    NaN        NaN           NaN                  Caribbean         NaN\n",
-       "157    NaN        NaN           NaN                       Palm         NaN\n",
-       "158    NaN        NaN           NaN                   PlantNet         NaN\n",
-       "159    NaN        NaN           NaN                      Total         NaN\n",
-       "\n",
-       "[312 rows x 5 columns]"
+       "     Total    Dataset   Main Trait                    Result  Percentage\n",
+       "20   Total  Caribbean  Leaf glands  Can infer correct Entity       100.0\n",
+       "90   Total   PlantNet  blade color  Can infer correct Entity       100.0\n",
+       "140  Total   PlantNet    sexuality   Can infer correct Value       100.0\n",
+       "141  Total   PlantNet        spine         None of the above       100.0\n",
+       "142  Total   PlantNet   stem shape  Can infer correct Entity       100.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_percentage"
+    "df_percentage[df_percentage['Percentage'] == 100]"
    ]
   },
   {
